# Trading-Rag

./: .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  VECTOR_DB_VS_AGENTIC_COMPARISON.md  cmd.md  cms.md  debug_paths.py  debug_settings.py  debug_stream.py  docker-compose-full.yml  docker-compose.yml  failing_json.txt  index.html  ingest_data.py  ingest_journal.py  ingest_more_data.py  output.txt  output_utf8.txt  push_demo_data.py  pyproject.toml  requirements.md  test_ask.py  test_connections.py  test_hard_queries.py  test_queries.py  test_questions.py  test_results_detailed_hard.txt  test_visualization.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
config/alertmanager/: alertmanager.yml
config/blackbox/: blackbox.yml
config/elasticsearch/: setup-indices.sh
config/filebeat/: filebeat.yml
config/logstash/: logstash.yml
config/logstash/pipeline/: 01-beats-input.conf  02-prometheus-input.conf  03-alerts-input.conf  (+1 more)
config/prometheus/: alerts.yml  prometheus.yml
infra-rag-skill/: SKILL.md
infra-rag-skill/evals/: evals.json
infra-rag-skill/references/: architecture.md  data-pipeline.md
infra-rag-skill/scripts/: test_api.py  test_routing.py
src/infra_rag/: __init__.py  audit.py  auth.py  cache.py  config.py  cost.py  esql_guard.py  freshness.py  main.py  models.py  observability.py  pii.py  rate_limit.py  reranker.py
src/trading_rag/: __init__.py  audit.py  cache.py  config.py  cost.py  esql_guard.py  freshness.py  main.py  models.py  observability.py  pii.py  rate_limit.py  reranker.py  resilience.py
(+65 files in other folders)
